# TransitOps

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  SEED_DATA.md  VIDEO_SCRIPT.md  compose.override.yml  compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: auth.py  dependencies.py
apps/api/app/api/v1/: analytics.py  auth.py  common.py  drivers.py  finance.py  health.py  maintenance.py  organizations.py  platform.py  router.py  trips.py  vehicles.py
apps/api/app/contracts/: __init__.py  enums.py  errors.py  filters.py  idempotency.py  pagination.py  permissions.py  unit_of_work.py
apps/api/app/contracts/dto/: __init__.py  auth.py  common.py  documents.py  drivers.py  finance.py  maintenance.py  notifications.py  reports.py  trips.py  vehicles.py
apps/api/app/contracts/repositories/: __init__.py  fuel.py  (+9 more)
apps/api/app/core/: config.py  database.py  exceptions.py  logging.py  middleware.py  security.py
apps/api/app/db/: __init__.py  base.py  constants.py  mixins.py  unit_of_work.py
apps/api/app/infrastructure/: __init__.py  rate_limit.py
apps/api/app/modules/: __init__.py
apps/api/app/workers/: __init__.py  broker.py  outbox.py  reports.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health.py
apps/api/tests/typecheck/: contract_spike.py
apps/api/tests/unit/: test_config.py  test_security.py
(+113 files in other folders)
